<resources>
    <string name="app_name">Clock &amp; Timer</string>
    <string name="action_view_clock">View Analog Clock</string>
    <string name="action_view_timer">Open Timer</string>
    <string name="title_clock">Analog Clock</string>
    <string name="title_timer">Timer</string>
    <string name="title_settings">Preferences</string>
    <string name="action_start">Start</string>
    <string name="action_pause">Pause</string>
    <string name="action_reset">Reset</string>
    <string name="timer_finished_toast">Timer complete!</string>

    <string name="pref_category_hands">Clock Hands</string>
    <string name="pref_category_markers">Markers</string>
    <string name="pref_hour_hand_title">Hour hand color</string>
    <string name="pref_minute_hand_title">Minute hand color</string>
    <string name="pref_second_hand_title">Second hand color</string>
    <string name="pref_milli_hand_title">Millisecond hand color</string>
    <string name="pref_marker_color_title">Marker &amp; number color</string>

    <string name="color_blue">Blue</string>
    <string name="color_teal">Teal</string>
    <string name="color_green">Green</string>
    <string name="color_orange">Orange</string>
    <string name="color_red">Red</string>
    <string name="color_purple">Purple</string>
    <string name="color_gray">Gray</string>
</resources>