<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar_timer"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:titleTextAppearance="@style/TextAppearance.AppCompat.Display1"
        app:title="Timer"
        app:titleCentered="true"/>

    <TextView
        android:id="@+id/text_timer_display"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="128dp"
        android:fontFamily="monospace"
        android:gravity="center"
        android:text="00:30.00"
        android:textAppearance="@style/TextAppearance.Material3.DisplayLarge"
        app:layout_constraintTop_toBottomOf="@id/toolbar_timer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/picker_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_timer">

        <NumberPicker
            android:id="@+id/picker_minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <NumberPicker
            android:id="@+id/picker_seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/button_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:singleSelection="false"
        app:layout_constraintTop_toBottomOf="@id/picker_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_start"
            style="@style/Widget.Material3.Button"
            android:height="@android:dimen/thumbnail_width"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_start" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_pause"
            style="@style/Widget.Material3.Button"
            android:height="@android:dimen/thumbnail_width"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_pause" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_reset"
            style="@style/Widget.Material3.Button"
            android:height="@android:dimen/thumbnail_width"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_reset" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

</androidx.constraintlayout.widget.ConstraintLayout>